@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "March 2020" "smp_utils\-1.00" SMP_UTILS
+.TH SMP_UTILS "8" "June 2021" "smp_utils\-1.00" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -326,7 +326,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2020 Douglas Gilbert
+Copyright \(co 2006\-2021 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
