@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011-2018, Douglas Gilbert
+ * Copyright (c) 2011-2021, Douglas Gilbert
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -52,7 +52,7 @@
  * its response.
  */
 
-static const char * version_str = "1.10 20180724";
+static const char * version_str = "1.11 20210615";
 
 /* Permission table big enough for 256 source zone groups (rows) and
  * 256 destination zone groups (columns). Each element is a single bit,
@@ -322,6 +322,7 @@ main(int argc, char * argv[])
     struct smp_target_obj tobj;
 
     memset(device_name, 0, sizeof device_name);
+    memset(i_params, 0, sizeof i_params);
     while (1) {
         int option_index = 0;
 
