@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006-2018, Douglas Gilbert
+ * Copyright (c) 2006-2021, Douglas Gilbert
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -51,7 +51,7 @@
  * This utility issues a PHY CONTROL function and outputs its response.
  */
 
-static const char * version_str = "1.25 20180725";
+static const char * version_str = "1.26 20210615";
 
 static struct option long_options[] = {
     {"attached", required_argument, 0, 'a'},
@@ -217,6 +217,7 @@ main(int argc, char * argv[])
     struct smp_target_obj tobj;
 
     memset(device_name, 0, sizeof device_name);
+    memset(i_params, 0, sizeof i_params);
     while (1) {
         int option_index = 0;
 
