@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011-2018, Douglas Gilbert
+ * Copyright (c) 2011-2021, Douglas Gilbert
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -51,7 +51,7 @@
  * This utility issues a ZONED BROADCAST function and outputs its response.
  */
 
-static const char * version_str = "1.08 20180725";
+static const char * version_str = "1.09 20210615";
 
 static struct option long_options[] = {
     {"broadcast", required_argument, 0, 'b'},
@@ -249,6 +249,7 @@ main(int argc, char * argv[])
 
     memset(smp_req, 0, sizeof smp_req);
     memset(device_name, 0, sizeof device_name);
+    memset(i_params, 0, sizeof i_params);
     while (1) {
         int option_index = 0;
 
